--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
     "gulp-less": "^5.0.0",
+    "gulp-nunjucks": "^5.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.6.0",
